# plane-spotter

./: .gitignore  CLAUDE.md  FIELD-USE.md  README.md  pyproject.toml
src/plane_spotter/: __init__.py  audio.py  capture.py  config.py  detector.py  incident.py  main.py  stats.py  tracker.py
tools/: audio_correlate.py  list_audio.py  listen_live.py  test_mic.py
